# AstraPulse

./: .gitignore  Cargo.toml  README.md  build.rs  changelog.md  update.json  yes  yes.pub
.cargo/: config.toml
.github/: dependabot.yml.bak
.github/workflows/: ci.yml  ci.yml.bak  clean.yml
builder/: Cargo.toml
modules/: AstraPulse  LightScheduling  app_temp.toml  config.toml  customize.sh  module.prop  service.sh
modules/config/: 9000.toml
modules/vtools/: gen_json.sh  init_vtools.sh  powercfg.sh
src/: cpu.rs  file_hander.rs  logger.rs  logger.rs.bak  main.rs  wait_boot.sh
src/framework/: mod.rs
src/framework/config/: data.rs  data.rs.bak  mod.rs  parser.rs  parser.rs.bak
src/framework/scheduler/: mod.rs  topapp.rs
src/framework/scheduler/looper/: boost.rs  buffer.rs  cpu.rs  cpu.rs.bak  deriver.rs  gpu.rs  mod.rs  mod.rs.bak  screen.rs  sf.rs  speed_controller.rs  topapp.rs  topapp.rs.bak
src/framework/scheduler/looper/buffer/: balance.prop  deriver.rs  feas.rs  mod.rs  performance.prop
src/framework/scheduler/looper/cpu/: freq.rs  migrate.rs  migrate.rs.bak  mod.rs  mod.rs.bak
src/framework/scheduler/looper/policy/: com_tencent_jkchess.rs  com_tencent_tmgp_pubgmhd.rs  mod.rs
task/: Cargo.toml
task/src/: main.rs
