[package]
name = "LightScheduling"
version = "1.0.0"
edition = "2021"
description = "一个轻调度，此调度不会与任何调度冲突同时此调度只会调节Cpu频率"
authors = ["[rust@localhost] $"]

[dependencies]
chrono = "0.4.39"
dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs" }
flexi_logger = "0.29.8"
libc = "0.2.169"
log = "0.4.25"
nix = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.16.0"
toml = "0.8.19"

[build-dependencies]
anyhow = "1.0.95"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
overflow-checks = false
opt-level = 3
strip = true

[profile.release]
debug = true
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
