[package]
name = "AstraPulse"
version = "1.0.0"
edition = "2021"
description = "专为萌新做的调度"
authors = ["[rust@localhost]"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs" }
flexi_logger = "0.29.8"
log = "0.4.25"
once_cell = "1.20.3"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"

[build-dependencies]
anyhow = "1.0.95"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
overflow-checks = false
opt-level = 3
strip = true

[profile.release]
debug = true
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
